@@ -9,7 +9,7 @@ LOADERS	= xm_load.o mod_load.o s3m_load.o stm_load.o 669_load.o far_load.o \
 	  arch_load.o sym_load.o dtt_load.o mgt_load.o med2_load.o med3_load.o \
 	  med4_load.o ssmt_load.o dbm_load.o umx_load.o gdm_load.o \
 	  coco_load.o pw_load.o gal5_load.o gal4_load.o mfp_load.o \
-	  polly_load.o stc_load.o
+	  polly_load.o stc_load.o asylum_load.o
 
 LOADERS_OBJS	= common.o iff.o itsex.o asif.o voltable.o sample.o $(LOADERS)
 LOADERS_DFILES	= Makefile $(LOADERS_OBJS:.o=.c) ftm_load.c \
