@@ -20,6 +20,7 @@ Stable versions
 	- add library regression tests
 	- add support to IT envelope carry
 	- add support to IT sample vibrato
+	- add ASYLUM Music Format V1.0 loader
 	- fix interpolation and sample loop processing
 	- fix S404 depacker integration
 	- fix note delay effect
